# qom

./: .gitignore  CHANGELOG.md  CHANGE_LOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
controllers/: solver_dynamics.py
docs/source/: basic.css  conf.py  index.rst  modules.rst  qom.io.rst  qom.loopers.BaseLooper.rst  qom.loopers.XLooper.rst  qom.loopers.XYLooper.rst  qom.loopers.XYZLooper.rst  qom.loopers.axes.rst  qom.loopers.base.rst  qom.loopers.dynamics.rst  qom.loopers.measures.rst  qom.loopers.properties.rst  qom.loopers.rst  qom.measures.correlations.rst  qom.measures.differences.rst  qom.measures.rst  qom.misc.rst  qom.numerics.RHCriterion.rst  qom.numerics.calculators.rst  qom.numerics.rst  qom.numerics.solvers.rst  qom.rst  qom.solvers.HLESolver.rst  qom.solvers.ODESolver.rst  qom.solvers.QCMSolver.rst  qom.solvers.RHCSolver.rst  qom.solvers.base.rst  qom.solvers.deterministic.rst  qom.solvers.differential.rst  qom.solvers.measure.rst  qom.solvers.rst  qom.solvers.stability.rst  qom.solvers.stochastic.rst  qom.systems.BaseSystem.rst  qom.systems.DODMSystem.rst  qom.systems.DOSMSystem.rst  qom.systems.SODMSystem.rst  qom.systems.SOMASystem.rst  (+23 more)
examples/: qom_loopers_XLooper.ipynb  qom_loopers_properties.ipynb  qom_loopers_properties.py  qom_solvers_HLESolver.ipynb  qom_systems_SOSMSystem.ipynb
helpers/: logger_console.py  plotter_2D.py
modules/measures/: quantum_correlations.py
modules/properties/: quantum_correlations.py
qom/: io.py  misc.py
qom/loopers/: axes.py  (+10 more)
(+113 files in other folders)
