[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qom"
version = "1.0.0"
authors = [
    { 
        name = "Sampreet Kalita",
        email = "sampreet.kalita@hotmail.com"
    },
]
description = "The Quantum Optomechanics Toolbox"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://github.com/sampreet/qom"